update by bugleesir

--- a/_posts/2024-1-4-Java教程.md
+++ b/_posts/2024-1-4-Java教程.md
@@ -2,79 +2,94 @@
 layout : article
 title : "Java教程"
 ---
+<!-- TOC -->
 
-- [抽象类](#抽象类)
-  - [抽象类定义](#抽象类定义)
-    - [抽象方法](#抽象方法)
-    - [抽象类举例](#抽象类举例)
-      - [例子1](#例子1)
-- [接口](#接口)
-  - [接口定义](#接口定义)
-  - [接口实现](#接口实现)
-    - [接口举例](#接口举例)
-- [抽象类和接口区别](#抽象类和接口区别)
-  - [1.语法层面上的区别](#1语法层面上的区别)
-  - [2.设计层面上的区别](#2设计层面上的区别)
-- [拆箱装箱基本概念](#拆箱装箱基本概念)
-- [包装类型的必要性](#包装类型的必要性)
-- [装箱和拆箱举例](#装箱和拆箱举例)
-- [缓存池问题](#缓存池问题)
-- [包装类常用方法](#包装类常用方法)
-- [String 和 StringBuilder、StringBuffer](#string-和-stringbuilderstringbuffer)
-  - [String](#string)
-  - [StringBuilder 和 StringBuffer](#stringbuilder-和-stringbuffer)
-- [(一) 匿名类](#一-匿名类)
-  - [概念](#概念)
-  - [语法](#语法)
-  - [应用举例](#应用举例)
-  - [匿名类的优缺点](#匿名类的优缺点)
-- [(二)内部类](#二内部类)
-  - [内部类概念](#内部类概念)
-  - [内部类语法](#内部类语法)
-  - [例子](#例子)
-- [设计模式与UML](#设计模式与uml)
-- [（一） 工厂方法模式（Factory Method）](#一-工厂方法模式factory-method)
-  - [1、普通工厂模式](#1普通工厂模式)
-  - [2、多个工厂方法模式](#2多个工厂方法模式)
-  - [3、静态工厂方法模式](#3静态工厂方法模式)
-  - [4、抽象工厂模式（Abstract Factory）](#4抽象工厂模式abstract-factory)
-- [（二） 单例模式（Single）](#二-单例模式single)
-  - [基本概念](#基本概念)
-  - [模式实现方式](#模式实现方式)
-- [（三） 模板方法模式](#三-模板方法模式)
-  - [模板方式基本概念](#模板方式基本概念)
-  - [代码实现](#代码实现)
-- [（四）认识类图](#四认识类图)
-  - [类图基本概念](#类图基本概念)
-  - [类图的UML 表示](#类图的uml-表示)
-  - [类的关系](#类的关系)
-    - [泛化关系](#泛化关系)
-    - [关联关系](#关联关系)
-    - [依赖关系](#依赖关系)
-- [关键字](#关键字)
-- [final](#final)
-  - [final概念](#final概念)
-  - [规则说明](#规则说明)
-    - [修饰类](#修饰类)
-    - [修饰方法](#修饰方法)
-    - [修饰变量](#修饰变量)
-  - [final例子](#final例子)
-- [synchronized](#synchronized)
-  - [synchronized概念](#synchronized概念)
-  - [synchronized例子](#synchronized例子)
-  - [注意问题](#注意问题)
-- [volatile](#volatile)
-  - [volatile基本概念](#volatile基本概念)
-  - [volatile例子1](#volatile例子1)
-  - [volatile例子2](#volatile例子2)
-- [transient](#transient)
-  - [transient概念](#transient概念)
-  - [transient例子](#transient例子)
-- [native](#native)
-  - [native基本概念](#native基本概念)
-  - [native规则说明](#native规则说明)
-  - [使用方法](#使用方法)
-  
+    - [抽象类](#抽象类)
+        - [抽象类定义](#抽象类定义)
+            - [抽象方法](#抽象方法)
+            - [抽象类举例](#抽象类举例)
+                - [例子1](#例子1)
+    - [接口](#接口)
+        - [接口定义](#接口定义)
+        - [接口实现](#接口实现)
+            - [接口举例](#接口举例)
+    - [抽象类和接口区别](#抽象类和接口区别)
+        - [1. 语法层面上的区别](#1-语法层面上的区别)
+        - [2. 设计层面上的区别](#2-设计层面上的区别)
+    - [拆箱装箱基本概念](#拆箱装箱基本概念)
+    - [包装类型的必要性](#包装类型的必要性)
+    - [装箱和拆箱举例](#装箱和拆箱举例)
+    - [缓存池问题](#缓存池问题)
+    - [包装类常用方法](#包装类常用方法)
+    - [String 和 StringBuilder、StringBuffer](#string-和-stringbuilderstringbuffer)
+        - [String](#string)
+        - [StringBuilder 和 StringBuffer](#stringbuilder-和-stringbuffer)
+    - [(一) 匿名类](#一-匿名类)
+        - [概念](#概念)
+        - [语法](#语法)
+        - [应用举例](#应用举例)
+        - [匿名类的优缺点](#匿名类的优缺点)
+    - [(二)内部类](#二内部类)
+        - [内部类概念](#内部类概念)
+        - [内部类语法](#内部类语法)
+        - [例子](#例子)
+    - [设计模式与UML](#设计模式与uml)
+    - [（一） 工厂方法模式（Factory Method）](#一-工厂方法模式factory-method)
+        - [1 、普通工厂模式](#1-普通工厂模式)
+        - [2 、多个工厂方法模式](#2-多个工厂方法模式)
+        - [3 、静态工厂方法模式](#3-静态工厂方法模式)
+        - [4 、抽象工厂模式（Abstract Factory）](#4-抽象工厂模式abstract-factory)
+    - [（二） 单例模式（Single）](#二-单例模式single)
+        - [基本概念](#基本概念)
+        - [模式实现方式](#模式实现方式)
+    - [（三） 模板方法模式](#三-模板方法模式)
+        - [模板方式基本概念](#模板方式基本概念)
+        - [代码实现](#代码实现)
+    - [（四）认识类图](#四认识类图)
+        - [类图基本概念](#类图基本概念)
+        - [类图的UML 表示](#类图的uml-表示)
+        - [类的关系](#类的关系)
+            - [泛化关系](#泛化关系)
+            - [关联关系](#关联关系)
+            - [依赖关系](#依赖关系)
+    - [关键字](#关键字)
+    - [final](#final)
+        - [final概念](#final概念)
+        - [规则说明](#规则说明)
+            - [修饰类](#修饰类)
+            - [修饰方法](#修饰方法)
+            - [修饰变量](#修饰变量)
+        - [final例子](#final例子)
+    - [synchronized](#synchronized)
+        - [synchronized概念](#synchronized概念)
+        - [synchronized例子](#synchronized例子)
+        - [注意问题](#注意问题)
+    - [volatile](#volatile)
+        - [volatile基本概念](#volatile基本概念)
+        - [volatile例子1](#volatile例子1)
+        - [volatile例子2](#volatile例子2)
+    - [transient](#transient)
+        - [transient概念](#transient概念)
+        - [transient例子](#transient例子)
+    - [native](#native)
+        - [native基本概念](#native基本概念)
+        - [native规则说明](#native规则说明)
+        - [使用方法](#使用方法)
+- [include <jni.h>](#include-jnih)
+- [ifndef IncludedHelloWorld](#ifndef-includedhelloworld)
+- [define IncludedHelloWorld](#define-includedhelloworld)
+- [ifdef cplusplus](#ifdef-cplusplus)
+- [endif](#endif)
+- [ifdef cplusplus](#ifdef-cplusplus)
+- [endif](#endif)
+- [endif](#endif)
+- [include <jni.h>](#include-jnih)
+- [include <jni.h>](#include-jnih)
+- [include "HelloWorld.h"](#include-helloworldh)
+- [include <stdio.h>](#include-stdioh)
+
+<!-- /TOC -->
+
 ## 抽象类
 
 ### 抽象类定义
