update by  bugleesir

--- a/_posts/2022-10-20-mklink命令的使用.md
+++ b/_posts/2022-10-20-mklink命令的使用.md
@@ -2,6 +2,15 @@
 layout : article
 title : "mklink命令的使用"
 ---
+<!-- TOC -->
+
+- [前景引入](#前景引入)
+- [mklink---符号链接命令](#mklink---符号链接命令)
+  - [1，创建符号链接的命令格式](#1创建符号链接的命令格式)
+  - [2，实际使用示例](#2实际使用示例)
+  - [3，不会弄的直接下载下面的压缩包](#3不会弄的直接下载下面的压缩包)
+
+<!-- /TOC -->
 
 ### 前景引入
 
