--- a/_posts/2023-9-23-使用Rasa构建中文对话机器人.md
+++ b/_posts/2023-9-23-使用Rasa构建中文对话机器人.md
@@ -3,6 +3,18 @@ layout : article
 title : "使用Rasa构建中文对话机器人"
 ---
 
+<!-- TOC -->
+
+- [前言---为何写这个教程](#前言---为何写这个教程)
+- [Part1---Rasa简介](#part1---rasa简介)
+- [Part2---Rasa部署教程](#part2---rasa部署教程)
+  - [1、下载Python 3.10 版本](#1下载python-310-版本)
+  - [2、下载Anaconda---Python包管理工具](#2下载anaconda---python包管理工具)
+  - [3、下载必要的依赖库](#3下载必要的依赖库)
+  - [4、运行Rasa项目](#4运行rasa项目)
+
+<!-- /TOC -->
+
 ### 前言---为何写这个教程
 
 起初是在学校里从老师手上接到了一个项目，项目的内容就是使用Rasa框架构建一个中文对话机器人，开始的时候还觉得挺简单的，但是在真正开始着手做的时候却发现其实有一大堆问题有待解决，在国内使用Rasa框架的人还是太少了，以至于我们在网上也找不到适合的资料，最后只能啃官方英文文档和去看官方教程，所以本教程旨在提供一些Rasa项目开发的经验以及供自己后来查阅。
