fix:修正了bat命令中的错误

--- a/_posts/2022-10-20-mklink命令的使用.md
+++ b/_posts/2022-10-20-mklink命令的使用.md
@@ -44,16 +44,27 @@ ps:需要先将要迁移的目标文件转移至目标目录再执行命令
 
 ```cmd
 @echo off
+setlocal enabledelayedexpansion
+chcp 65001
 echo "请输入需要移动的文件/文件夹的绝对路径"
 set /P source=
 echo "请输入转移目标位置的绝对路径"
 set /P target=
-cd %source%
-xcopy * %target% /H /E /Y
+if exist %source%\ (
 for %%I in (%source%) do set temp=%%~nI
-cd ..
-rd/s/q %temp%
-mklink /D "%source%" "%target%"
+echo !temp!
+echo %target%\!temp!
+md %target%\!temp!
+xcopy %source% %target%\!temp! /H /E /Y
+rd %source% /s/q
+mklink /D "%source%" "%target%\!temp!"
 pause
+) else (
+for %%I in (%source%) do set temp=%%~nxI
+copy %source% %target%
+del %source%
+mklink %source% %target%\!temp!
+pause
+)
 @REM 作者BugLeesir
 ```
