update by bugleesir

--- a/_posts/2024-4-7-批处理教程.md
+++ b/_posts/2024-4-7-批处理教程.md
@@ -605,7 +605,7 @@ Tab(09) ; = 不常用的参数界定符
 这个字符在批处理中的意思是关闭当前行的回显。我们从前几课知道  
 ECHO OFF可以关闭掉整个批处理命令的回显，但不能关掉ECHO OFF这个命令，现在我们在ECHO OFF这个命令前加个@，就可以达到所有命令均不回显的要求  
 
-#### %批处理变量引导符
+#### '%'批处理变量引导符
 
 这个百分号严格来说是算不上命令的，它只是批处理中的参数而已（多个%一起使用的情况除外，以后还将详细介绍）。  
 引用变量用%var%，调用程序外部参数用%1至%9等等  
