--- a/_posts/2024-4-7-批处理教程.md
+++ b/_posts/2024-4-7-批处理教程.md
@@ -173,8 +173,10 @@ GOTO会点编程的朋友就会知道这是跳转的意思。
 在批处理中允许以“:XXX”来构建一个标号，然后用GOTO XXX跳转到标号:XXX处，然后执行标号后的命令。  
 例：
 
-> if {{ "{%1}" }}=={} goto noparms  
+```shell
+> if {%1}=={} goto noparms  
 > if \\"%2\\"==\\"\\" goto noparms
+```
 
 标签的名字可以随便起，但是最好是有意义的字符串啦，前加个冒号用来表示这个字符串是标签，goto命令就是根据这个冒号（:）来寻找下一步跳到到那里。最好有一些说明这样你别人看起来才会理解你的意图啊。  
 
