--- a/_posts/2024-4-7-批处理教程.md
+++ b/_posts/2024-4-7-批处理教程.md
@@ -3,6 +3,7 @@ layout : aritcle
 title : "批处理教程(转)"
 ---
 
+{% raw %}
 
 ## 第一章 批处理基础
 
@@ -2833,3 +2834,5 @@ echo ok
 运行命令字符串生成最终结果为：  
 ok  
 请按任意键继续.
+
+{% endraw %}
