update by bugleesir

--- a/_posts/2024-5-20-GPT4黑科技.md
+++ b/_posts/2024-5-20-GPT4黑科技.md
@@ -9,7 +9,7 @@ title : "GPT4黑科技"
 - [教程](#教程)
   - [1.拉取模型转换服务](#1拉取模型转换服务)
   - [2.获取github授权密钥](#2获取github授权密钥)
-  - [3.下载Chatbox](#3下载chatbox)
+  - [3.下载Chatbox或者NextChat](#3下载chatbox或者nextchat)
 
 <!-- /TOC -->
 
@@ -41,9 +41,11 @@ title : "GPT4黑科技"
 
 ps:*获取到密钥后请谨慎保存，若被泄露可能会有封号风险*
 
-### 3.下载Chatbox
+### 3.下载Chatbox或者NextChat
 
 [Chatbox](https://github.com/Bin-Huang/chatbox)
+
+[NextChat](https://github.com/ChatGPTNextWeb/ChatGPT-Next-Web/releases)
 
 安装完成后进行配置：
 
