update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -5,6 +5,7 @@ title: 面试题目
 
 
 
+
 ## Java集合框架
 
 ### 1.阻塞队列的阻塞是什么含义？
@@ -175,7 +176,7 @@ HashMap 中的变量（如容量、阈值等）在多线程环境中如果没有
 
 AVL 树是一种自平衡的二叉查找树，它通过在每个节点上存储一个平衡因子（balance factor）来保持树的平衡。平衡因子定义为左右子树的高度差，它可以是 -1、0 或 1。
 
-AVL 树的基本操作
+**AVL 树的基本操作**  
 
 插入操作：
 
@@ -193,7 +194,7 @@ AVL 树的基本操作
 
 当平衡二叉树（如 AVL 树）的平衡性被破坏时，通常是因为插入或删除了一个节点，导致某些节点的平衡因子（左子树高度与右子树高度之差）的绝对值超过了允许的范围（对于 AVL 树来说是 1）。为了恢复平衡，需要执行一系列旋转操作。
 
-恢复平衡的步骤
+**恢复平衡的步骤**  
 
 确定破坏点：找到第一个平衡因子绝对值大于 1 的节点。
 
@@ -237,11 +238,11 @@ RL模式的旋转操作
 
 ![error](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/3a6327794b26a6bb0eb28469a8f3cb8.jpg)
 
-### 7.红黑树
+#### 红黑树
 
 红黑树（Red-Black Tree）是一种自平衡的二叉查找树，它通过特定的颜色标记以及旋转和重新着色操作来维持树的近似平衡，从而确保树的高度保持在(O(\log n))，这里(n)是树中节点的数量。这使得红黑树能够高效地执行查找、插入和删除操作。
 
-红黑树的特点
+**红黑树的特点**  
 
 红黑树的每个节点都有一个颜色属性，可以是红色（red）或黑色（black），并且满足以下性质：
 
@@ -255,11 +256,11 @@ RL模式的旋转操作
 
 黑色高度：从任一节点到其每个叶子的所有简单路径上包含相同数量的黑色节点。
 
-插入后恢复平衡的情况
+**插入后恢复平衡的情况**  
 
 当插入一个新节点后，该节点被标记为红色，并且可能违反红黑树的性质。常见的恢复策略包括：
 
-变色：如果新插入的节点的父节点也是红色，那么需要考虑变色操作。如果叔叔节点（父节点的兄弟节点）也是红色，则将父节点和叔叔节点都变为黑色，祖父节点变为红色，然后以祖父节点作为新的起点继续检查。
+变色：如果新插入的节点的父节点也是红色，那么需要考虑变色操作（若父节点为黑色则无需自平衡）。如果叔叔节点（父节点的兄弟节点）也是红色，则将父节点和叔叔节点都变为黑色，祖父节点变为红色，然后以祖父节点作为新的起点继续检查（即黑红红改为红黑红）。
 
 旋转：如果叔叔节点是黑色或不存在，则需要进行旋转操作来调整树的结构。具体分为以下几种情况：
 
@@ -271,7 +272,7 @@ RL模式的旋转操作
 
 右左情况：如果新节点是其父节点的左孩子，而父节点是其祖父节点的右孩子，则先对其父节点进行右旋，再对祖父节点进行左旋。
 
-删除后的恢复平衡
+**删除后的恢复平衡**  
 
 删除节点后，可能需要调整树的结构来恢复红黑树的性质。主要关注的是删除操作可能导致的黑色高度减少问题。常见的恢复策略包括：
 
@@ -287,7 +288,7 @@ RL模式的旋转操作
 
 如果兄弟节点是黑色，且兄弟节点的内侧子节点是红色，则可以先进行一次旋转（左旋或右旋），使兄弟节点成为父节点，然后进行变色。
 
-### 8.HashMap 的 put 流程
+### 7.HashMap 的 put 流程
 
 第一步，通过 hash 方法计算 key 的哈希值。
 
@@ -353,7 +354,7 @@ if (++size > threshold)
     resize();
 ```
 
-### 9.只重写 equals 没重写 hashcode，map put 的时候会发生什么?
+### 8.只重写 equals 没重写 hashcode，map put 的时候会发生什么?
 
 如果只重写 equals 方法，没有重写 hashcode 方法，那么会导致 equals 相等的两个对象，hashcode 不相等，这样的话，这两个对象会被放到不同的桶中，这样就会导致 get 的时候，找不到对应的值。
 
@@ -361,7 +362,7 @@ if (++size > threshold)
 
 如果你只重写了 equals 方法，那么即使两个键 equals 相等，但它们的 hashCode 不同，Map 将无法找到正确的条目，导致返回 null，即使该键实际上存在于 Map 中。
 
-### 10.为什么要用高低做异或运算？为什么非得高低 16 位异或？
+### 9.为什么要用高低做异或运算？为什么非得高低 16 位异或？
 
 为什么使用高低位进行异或运算？
 
@@ -393,7 +394,7 @@ if (++size > threshold)
 
 在实际应用中，高低 16 位异或已经被证明是一种有效的哈希函数优化方法。许多成熟的哈希函数（如 Jenkins Hash Function）都采用了这种方法。
 
-### 11.为什么 HashMap 的容量是 2 的倍数呢？
+### 10.为什么 HashMap 的容量是 2 的倍数呢？hashCode 对数组长度取模定位数组下标的优化策略？
 
 哈希值计算：
 
@@ -411,3 +412,426 @@ HashMap 使用哈希码来确定元素存储的位置。哈希码通过与数组
 硬件优化：
 
 在现代计算机体系结构中，位运算通常比算术运算（如除法和取模）更快。因此，使用位运算来替代取模运算可以带来性能上的优势。
+
+### 11.map 集合在使用时候一般都需要写容量值？为什么要写？扩容机制？
+
+在使用 Java 中的 HashMap 时，通常会在创建 HashMap 实例时指定初始容量。这是因为 HashMap 的性能很大程度上取决于它的容量大小。指定合适的初始容量可以帮助避免不必要的扩容操作，从而提高程序的性能。
+
+**为什么需要指定容量**  
+
+1. 减少扩容次数：当 HashMap 的容量达到阈值时，会触发一次扩容操作。如果 HashMap 的容量过大，那么每次扩容都需要重新计算哈希值，这可能会导致不必要的性能开销。通过指定合适的初始容量，可以减少扩容操作的次数，提高 HashMap 的性能。
+
+2. 减少哈希碰撞：如果 HashMap 的容量过小，可能会导致哈希碰撞（即两个不同的键计算出相同的哈希值）。这会导致在 HashMap 中存在多个键映射到同一个位置，从而导致查找和插入操作的时间复杂度提高。通过指定合适的初始容量，可以减少哈希碰撞，提高 HashMap 的性能。
+
+3. 减少内存占用：当 HashMap 的容量过大时，可能会导致 HashMap 的内存占用过多。通过指定合适的初始容量，可以减少 HashMap 的内存占用，提高 HashMap 的性能。
+
+**扩容机制**  
+
+HashMap 的默认初始容量是 16，而且容量总是 2 的幂次方。当 HashMap 中的元素数量超过了当前容量与加载因子（默认为 0.75）的乘积时，就会触发扩容操作。扩容时，HashMap 会创建一个新的数组，其容量通常是原来的两倍，并将原有数组中的所有元素重新散列并放入新的数组中。
+
+### 12.红黑树转回链表的阈值为什么默认是6而不是8？
+
+因为如果这个阈值也设置成 8，假如发生碰撞，节点增减刚好在 8 附近，会发生链表和红黑树的不断转换，导致资源浪费。
+
+### 13.JDK8对HashMap的实现原理做了哪些优化？
+
+1. 底层数据结构由数组 + 链表改成了数组 + 链表或红黑树的结构。
+
+原因：如果多个键映射到了同一个哈希值，链表会变得很长，在最坏的情况下，当所有的键都映射到同一个桶中时，性能会退化到 O(n)，而红黑树的时间复杂度是 O(logn)。
+
+2.链表的插入方式由头插法改为了尾插法。
+
+原因：头插法虽然简单快捷，但扩容后容易改变原来链表的顺序。
+
+3.扩容的时机由插入时判断改为插入后判断。
+
+原因：可以避免在每次插入时都进行不必要的扩容检查，因为有可能插入后仍然不需要扩容。
+
+4.优化了哈希算法
+
+JDK 7 进行了多次移位和异或操作来计算元素的哈希值。JDK 8 优化了这个算法，只进行了一次异或操作，但仍然能有效地减少冲突。并且能够保证扩容后，元素的新位置要么是原位置，要么是原位置加上旧容量大小。
+
+### 14.HashMap和TreeMap的区别？
+
+1.HashMap 是基于数组+链表+红黑树实现的，put 元素的时候会先计算 key 的哈希值，然后通过哈希值计算出数组的索引，然后将元素插入到数组中，如果发生哈希冲突，会使用链表来解决，如果链表长度大于 8，会转换为红黑树。
+
+get 元素的时候同样会先计算 key 的哈希值，然后通过哈希值计算出数组的索引，如果遇到链表或者红黑树，会通过 key 的 equals 方法来判断是否是要找的元素。
+
+2.TreeMap 是基于红黑树实现的，put 元素的时候会先判断根节点是否为空，如果为空，直接插入到根节点，如果不为空，会通过 key 的比较器来判断元素应该插入到左子树还是右子树。
+
+get 元素的时候会通过 key 的比较器来判断元素的位置，然后递归查找。
+
+由于 HashMap 是基于哈希表实现的，所以在没有发生哈希冲突的情况下，HashMap 的查找效率是 O(1)。适用于查找操作比较频繁的场景。
+
+而 TreeMap 是基于红黑树实现的，所以 TreeMap 的查找效率是 O(logn)。并且保证了元素的顺序，因此适用于需要大量范围查找或者有序遍历的场景。
+
+## Java并发编程
+
+### 1.你对线程安全的理解是什么？
+
+线程安全是并发编程中一个重要的概念，如果一段代码块或者一个方法在多线程环境中被多个线程同时执行时能够正确地处理共享数据，那么这段代码块或者方法就是线程安全的。
+
+可以从三个要素来确保线程安全：
+
+①、原子性：确保当某个线程修改共享变量时，没有其他线程可以同时修改这个变量，即这个操作是不可分割的。
+
+②、可见性：确保一个线程对共享变量的修改可以立即被其他线程看到。
+
+③、活跃性问题：要确保线程不会因为死锁、饥饿、活锁等问题导致无法继续执行。
+
+### 2.线程和进程的区别？
+
+**定义**  
+
+进程：进程是操作系统中程序的一次执行实例，它是系统进行资源分配和调度的基本单位。每个进程都有独立的地址空间和其他资源（如文件句柄、环境变量等）。
+
+线程：线程是进程内的一个执行流，它是处理器调度和分派的基本单位。同一进程内的线程共享该进程的地址空间和资源。
+
+**资源占用**  
+
+进程拥有独立的内存空间，因此每个进程都有自己的数据段、堆栈段和代码段等，这意味着进程间的资源是隔离的。
+
+线程共享所属进程的数据段、堆栈段和代码段等资源，因此创建线程比创建进程消耗更少的资源。
+
+**上下文切换开销**  
+
+进程间的上下文切换涉及到更多的资源转移和保护，因此开销较大。
+
+线程间的上下文切换仅需保存和恢复少量寄存器值及栈指针，因此开销较小。
+
+**通信方式**  
+
+进程间通信（IPC）通常需要通过操作系统提供的机制来实现，如管道、消息队列、共享内存等，这增加了通信的复杂度。
+
+线程可以直接访问同一进程内的全局变量或数据结构，因此线程间的通信更为简单直接。
+
+**生命周期管理**  
+
+进程的创建和销毁涉及更多资源的初始化和清理工作，因此相对于线程来说更加耗时。
+
+线程的生命周期管理较为轻量级，创建和销毁速度快。
+
+**依赖关系**  
+
+线程依赖于进程的存在，没有进程就没有线程。进程是独立的执行环境，可以不依赖其他进程单独存在。
+
+### 3.线程共享内存和进程共享内存的区别？
+
+#### 进程共享内存
+
+**共享范围**  
+
+不同进程之间默认情况下是不共享内存的，每个进程都有自己的独立地址空间。进程间的内存共享需要通过特定的技术手段实现，例如通过共享内存段、映射文件等方式。
+
+**通信复杂度**  
+
+进程间通信（IPC）通常需要通过操作系统提供的机制来实现，如管道、消息队列、共享内存、套接字等。这些机制比线程间的直接内存访问要复杂得多。
+
+**数据一致性**  
+
+由于进程间通信需要通过特定的通道进行，因此在设计上更容易实现数据的一致性和安全性。
+
+**资源开销**  
+
+创建进程的资源开销相对较大，因为每个进程都需要自己的虚拟地址空间和系统资源（如文件句柄、环境变量等）。
+
+#### 线程共享内存
+
+**共享范围**  
+
+同一进程内的所有线程共享该进程的整个地址空间，包括代码段、数据段、堆和栈等。
+
+**通信复杂度**  
+
+线程之间的通信非常简单，因为它们可以直接访问同一进程内的全局变量或其他数据结构，无需复杂的同步机制。
+
+**数据一致性**  
+
+虽然共享内存简化了线程间的通信，但也带来了数据一致性和同步的问题，需要通过锁机制（如互斥锁、信号量等）来保证数据访问的原子性和一致性。
+
+**资源开销**  
+
+创建线程的资源开销相对较小，因为不需要额外的内存空间分配，只需为每个线程维护一个栈和一些控制信息即可。
+
+### 4.有多少种实现线程的方式？
+
+**继承Thread类**  
+
+```java
+class ThreadTask extends Thread {
+    public void run() {
+        System.out.println("继承Thread类");
+    }
+
+    public static void main(String[] args) {
+        ThreadTask task = new ThreadTask();
+        task.start();
+    }
+}
+```
+
+直接继承Thread类，并重写其run方法。这种方式简单直观，但因为Java不支持多重继承，所以如果需要继承其他类，则不能使用这种方法。
+
+**实现Runnable接口**  
+
+```java
+class RunnableTask implements Runnable {
+    public void run() {
+        System.out.println("实现Runnable接口");
+    }
+
+    public static void main(String[] args) {
+        RunnableTask task = new RunnableTask();
+        Thread thread = new Thread(task);
+        thread.start();
+    }
+}
+```
+
+实现Runnable接口并重写run方法，然后将这个对象传递给Thread类的构造函数创建线程。这种方式更灵活，因为它允许类继承其他类的同时实现多线程功能。
+
+**实现Callable接口配合FutureTask使用**  
+
+```java
+class CallableTask implements Callable<String> {
+    public String call() {
+        return "实现Callable接口";
+    }
+
+    public static void main(String[] args) throws ExecutionException, InterruptedException {
+        CallableTask task = new CallableTask();
+        FutureTask<String> futureTask = new FutureTask<>(task);
+        Thread thread = new Thread(futureTask);
+        thread.start();
+        System.out.println(futureTask.get());
+    }
+}
+```
+
+Callable接口类似于Runnable，不同之处在于Callable的call方法可以返回结果，并且可以抛出异常。通过FutureTask包装Callable对象，然后将其传递给Thread类创建线程。这种方式适合需要返回结果的任务。
+
+**使用Executor框架和线程池**  
+
+[线程池的应用](#6讲一讲你对线程池的理解并讲一讲使用的场景)
+
+### 5.为什么在项目中使用线程池？
+
+1、频繁地创建和销毁线程会消耗系统资源，线程池能够复用已创建的线程。
+
+2、提高响应速度，当任务到达时，任务可以不需要等待线程创建就立即执行。
+
+3、线程池支持定时执行、周期性执行、单线程执行和并发数控制等功能。
+
+### 6.讲一讲你对线程池的理解，并讲一讲使用的场景
+
+#### 线程池的概念
+
+线程池是一种管理线程的技术，它预先创建一组线程，并将它们组织在一起，以便能够高效地处理多个任务。线程池的核心思想是复用已创建的线程，而不是每次任务到来时都创建新的线程。
+
+#### 线程池的基本组成
+
+核心线程数（Core Pool Size）：线程池中始终维持的最小线程数。
+
+最大线程数（Maximum Pool Size）：线程池中允许的最大线程数。
+
+工作队列（Work Queue）：用来存储等待执行的任务。
+
+拒绝策略（Rejection Policy）：当线程池无法接收更多任务时采取的策略。
+
+线程工厂（Thread Factory）：用于创建新线程的对象。
+
+**Java中线程池的主要参数**  
+
+①、corePoolSize
+
+定义了线程池中的核心线程数量。即使这些线程处于空闲状态，它们也不会被回收。这是线程池保持在等待状态下的线程数。
+
+②、maximumPoolSize
+
+线程池允许的最大线程数量。当工作队列满了之后，线程池会创建新线程来处理任务，直到线程数达到这个最大值。
+
+③、keepAliveTime
+
+非核心线程的空闲存活时间。如果线程池中的线程数量超过了 corePoolSize，那么这些多余的线程在空闲时间超过 keepAliveTime 时会被终止。
+
+④、unit
+
+keepAliveTime 参数的时间单位：
+
+TimeUnit.DAYS; 天
+TimeUnit.HOURS; 小时
+TimeUnit.MINUTES; 分钟
+TimeUnit.SECONDS; 秒
+TimeUnit.MILLISECONDS; 毫秒
+TimeUnit.MICROSECONDS; 微秒
+TimeUnit.NANOSECONDS; 纳秒
+⑤、workQueue
+
+用于存放待处理任务的阻塞队列。当所有核心线程都忙时，新任务会被放在这个队列里等待执行。
+
+⑥、threadFactory
+
+一个创建新线程的工厂。它用于创建线程池中的线程。可以通过自定义 ThreadFactory 来给线程池中的线程设置有意义的名字，或设置优先级等。
+
+⑦、handler
+
+拒绝策略 RejectedExecutionHandler，定义了当线程池和工作队列都满了之后对新提交的任务的处理策略。常见的拒绝策略包括抛出异常、直接丢弃、丢弃队列中最老的任务、由提交任务的线程来直接执行任务等。
+
+#### 线程池的工作流程
+
+1.任务提交：当一个任务提交到线程池时，线程池会尝试分配一个线程来执行该任务。
+
+2.核心线程数：如果当前活动线程少于核心线程数，即使有空闲线程，也会创建新的线程来执行任务。
+
+3.工作队列：如果当前活动线程等于核心线程数，但还有任务需要执行，那么这些任务会被放入工作队列中等待执行。
+
+4.最大线程数：如果工作队列已满，线程池会尝试创建新的线程，直到达到最大线程数。
+
+5.拒绝策略：如果线程池已经达到最大线程数且工作队列已满，线程池将根据拒绝策略处理新任务。
+
+#### 线程池的拒绝策略
+
+**AbortPolicy：**
+
+这是默认的拒绝策略。当线程池无法接受新任务时，它会抛出一个RejectedExecutionException异常。这通常意味着应用程序需要处理这个异常，并可能需要采取补救措施，比如记录日志或者通知管理员。
+
+**CallerRunsPolicy：**
+
+当线程池无法接受新任务时，这个策略会让调用者所在的线程来运行这个任务。如果调用者的线程本身已经在执行其他任务，那么可能会导致调用者线程的阻塞。*这种策略适合于并发度不高、性能要求不是特别高的场景。*
+
+**DiscardPolicy：**
+
+当线程池无法接受新任务时，这个策略会直接丢弃任务而不执行它，也不会抛出异常。*这种策略适用于那些可以容忍任务丢失的场景。*
+
+**DiscardOldestPolicy：**
+
+当线程池无法接受新任务时，这个策略会首先丢弃队列中最旧的任务，然后尝试再次提交新任务。*这种策略有助于优先处理最新的任务，但可能导致某些任务永远无法被执行。*
+
+**自定义拒绝策略**  
+
+除了这些内置的拒绝策略之外，还可以通过实现RejectedExecutionHandler接口来自定义拒绝策略，以适应特定的应用需求。
+
+#### 线程池的阻塞队列
+
+**ArrayBlockingQueue：**
+
+一个由数组结构组成的有界阻塞队列。
+
+按照先进先出（FIFO）排序元素。
+
+是LinkedBlockingQueue的一个替代品，当需要一个容量固定的队列时使用。
+
+**LinkedBlockingQueue：**
+
+一个基于链表结构的阻塞队列，吞吐量通常要高于ArrayBlockingQueue。
+
+默认情况下是无界的，但是可以通过构造函数指定队列长度。
+
+适用于需要一个具有较高吞吐量的无界或有限阻塞队列的情况
+
+**PriorityBlockingQueue：**
+
+一个具有优先级的无界阻塞队列。
+
+支持优先级排序的功能，可以按照优先级来决定哪个任务先被执行。
+
+适用于需要根据任务优先级来调度执行的任务队列。
+
+**DelayQueue：**
+
+一个使用Delayed元素的无界阻塞队列。
+
+队列中的元素只有在其延迟过期后才能被消费者线程获取。
+
+适用于需要延迟执行的任务。
+
+**SynchronousQueue：**
+
+一个不存储元素的阻塞队列。
+
+每个插入操作必须等待另一个线程的相应移除操作，反之亦然。
+
+适用于传递元素，而不是存储元素的情况，通常用于实现生产者-消费者模型。
+
+#### 线程池的提交
+
+**execute(Runnable command)**  
+
+```java
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+public class ThreadPoolExample {
+    public static void main(String[] args) {
+        // 创建线程池
+        ExecutorService executor = Executors.newFixedThreadPool(5);
+
+        // 提交任务
+        for (int i = 0; i < 10; i++) {
+            int taskId = i;
+            executor.execute(() -> {
+                System.out.println("Task " + taskId + " is running on thread " + Thread.currentThread().getName());
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            });
+
+            // 关闭线程池
+            executor.shutdown();
+            try {
+                if (!executor.awaitTermination(1, TimeUnit.MINUTES)) {
+                    executor.shutdownNow();
+                }
+            } catch (InterruptedException e) {
+                executor.shutdownNow();
+                Thread.currentThread().interrupt();
+            }
+        }
+    }
+}
+```
+
+execute方法用于提交一个Runnable任务，是最基本的提交方式。它没有返回值，也不支持获取任务执行结果。
+
+**submit(Runnable task)**  
+
+```java
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+
+public class ThreadPoolExample {
+    public static void main(String[] args) {
+        // 创建线程池
+        ExecutorService executor = Executors.newFixedThreadPool(5);
+
+        // 提交任务
+        for (int i = 0; i < 10; i++) {
+            int taskId = i;
+            Future<?> future = executor.submit(() -> {
+                System.out.println("Task " + taskId + " is running on thread " + Thread.currentThread().getName());
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            });
+
+            // 关闭线程池
+            executor.shutdown();
+            try {
+                if (!executor.awaitTermination(1, TimeUnit.MINUTES)) {
+                    executor.shutdownNow();
+                }
+            } catch (InterruptedException e) {
+                executor.shutdownNow();
+                Thread.currentThread().interrupt();
+            }
+        }
+    }
+}
+```
+
+submit方法用于提交一个Runnable任务，并返回一个Future对象，可以用来获取任务的执行状态和结果。
