update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -835,3 +835,416 @@ public class ThreadPoolExample {
 ```
 
 submit方法用于提交一个Runnable任务，并返回一个Future对象，可以用来获取任务的执行状态和结果。
+
+#### 线程池的关闭
+
+可以通过调用线程池的shutdown或shutdownNow方法来关闭线程池。它们的原理是遍历线程池中的工作线程，然后逐个调用线程的 interrupt 方法来中断线程，所以无法响应中断的任务可能永远无法终止。
+
+**shutdown() 将线程池状态置为 shutdown,并不会立即停止：**
+
+停止接收外部 submit 的任务
+内部正在跑的任务和队列里等待的任务，会执行完
+等到第二步完成后，才真正停止
+
+**shutdownNow() 将线程池状态置为 stop。一般会立即停止，事实上不一定：**
+
+和 shutdown()一样，先停止接收外部提交的任务
+忽略队列里等待的任务
+尝试将正在跑的任务 interrupt 中断
+返回未执行的任务列表
+
+shutdown 和 shutdownnow 简单来说区别如下：
+
+shutdownNow()能立即停止线程池，正在跑的和正在等待的任务都停下了。这样做立即生效，但是风险也比较大。
+
+shutdown()只是关闭了提交通道，用 submit()是无效的；而内部的任务该怎么跑还是怎么跑，跑完再彻底停止线程池。
+
+#### 线程池的线程数配置
+
+①、对于 CPU 密集型任务，我的目标是尽量减少线程上下文切换，以优化 CPU 使用率。一般来说，*核心线程数设置为处理器的核心数或核心数加一*（以备不时之需，如某些线程因等待系统资源而阻塞时）是较理想的选择。
+
+②、对于 IO 密集型任务，由于线程经常处于等待状态（等待 IO 操作完成），可以*设置更多的线程来提高并发性（比如说 2 倍）*，从而增加 CPU 利用率。
+
+#### 线程池的种类
+
+**newFixedThreadPool (固定线程数目的线程池)**  
+
+```java
+public static ExecutorService newFixedThreadPool(int nThreads, ThreadFactory threadFactory) {
+    return new ThreadPoolExecutor(nThreads, nThreads,
+                                  0L, TimeUnit.MILLISECONDS,
+                                  new LinkedBlockingQueue<Runnable>(),
+                                  threadFactory);
+}
+```
+
+**线程池特点**  
+
+核心线程数和最大线程数大小一样
+
+没有所谓的非空闲时间，即 keepAliveTime 为 0
+
+阻塞队列为无界队列 LinkedBlockingQueue，可能会导致 OOM
+
+**工作流程**  
+
+提交任务
+
+如果线程数少于核心线程，创建核心线程执行任务
+
+如果线程数等于核心线程，把任务添加到 LinkedBlockingQueue 阻塞队列
+
+如果线程执行完任务，去阻塞队列取任务，继续执行。
+
+**适用场景**  
+
+FixedThreadPool 适用于处理 CPU 密集型的任务，确保 CPU 在长期被工作线程使用的情况下，尽可能的少的分配线程，即适用执行长期的任务。
+
+**newCachedThreadPool (可缓存线程的线程池)**  
+
+```java
+public static ExecutorService newCachedThreadPool(ThreadFactory threadFactory) {
+    return new ThreadPoolExecutor(0, Integer.MAX_VALUE,
+                                  60L, TimeUnit.SECONDS,
+                                  new SynchronousQueue<Runnable>(),
+                                  threadFactory);
+}
+```
+
+**线程池特点**  
+
+核心线程数为 0
+
+最大线程数为 Integer.MAX_VALUE，即无限大，可能会因为无限创建线程，导致 OOM
+
+阻塞队列是 SynchronousQueue
+
+非核心线程空闲存活时间为 60 秒
+
+当提交任务的速度大于处理任务的速度时，每次提交一个任务，就必然会创建一个线程。极端情况下会创建过多的线程，耗尽 CPU 和内存资源。由于空闲 60 秒的线程会被终止，长时间保持空闲的 CachedThreadPool 不会占用任何资源。
+
+**工作流程**  
+
+提交任务
+
+因为没有核心线程，所以任务直接加到 SynchronousQueue 队列。
+
+判断是否有空闲线程，如果有，就去取出任务执行。
+
+如果没有空闲线程，就新建一个线程执行。
+
+执行完任务的线程，还可以存活 60 秒，如果在这期间，接到任务，可以继续活下去；否则，被销毁。
+
+**适用场景**  
+
+用于并发执行大量短期的小任务。
+
+**newSingleThreadExecutor (单线程的线程池)**  
+
+```java
+public static ExecutorService newSingleThreadExecutor(ThreadFactory threadFactory) {
+    return new FinalizableDelegatedExecutorService
+        (new ThreadPoolExecutor(1, 1,
+                                0L, TimeUnit.MILLISECONDS,
+                                new LinkedBlockingQueue<Runnable>(),
+                                threadFactory));
+}
+```
+
+**线程池特点**  
+
+核心线程数为 1
+
+最大线程数也为 1
+
+阻塞队列是无界队列 LinkedBlockingQueue，可能会导致 OOM
+
+keepAliveTime 为 0
+
+**工作流程**  
+
+提交任务
+
+线程池是否有一条线程在，如果没有，新建线程执行任务
+
+如果有，将任务加到阻塞队列
+
+当前的唯一线程，从队列取任务，执行完一个，再继续取，一个线程执行任务。
+
+**适用场景**  
+
+适用于串行执行任务的场景，一个任务一个任务地执行。
+
+**newScheduledThreadPool (定时及周期执行的线程池)**  
+
+```java
+public ScheduledThreadPoolExecutor(int corePoolSize) {
+    super(corePoolSize, Integer.MAX_VALUE, 0, NANOSECONDS,
+          new DelayedWorkQueue());
+}
+```
+
+**线程池特点**  
+
+最大线程数为 Integer.MAX_VALUE，也有 OOM 的风险
+
+阻塞队列是 DelayedWorkQueue
+
+keepAliveTime 为 0
+
+scheduleAtFixedRate() ：按某种速率周期执行
+
+scheduleWithFixedDelay()：在某个延迟后执行
+
+**工作机制**  
+
+线程从 DelayQueue 中获取已到期的 ScheduledFutureTask（DelayQueue.take()）。到期任务是指 ScheduledFutureTask 的 time 大于等于当前时间。
+
+线程执行这个 ScheduledFutureTask。
+
+线程修改 ScheduledFutureTask 的 time 变量为下次将要被执行的时间。
+
+线程把这个修改 time 之后的 ScheduledFutureTask 放回 DelayQueue 中（DelayQueue.add()）。
+
+**适用场景**  
+
+周期性执行任务的场景，需要限制线程数量的场景
+
+#### 线程池异常处理
+
+1.try-catch 捕获异常
+
+2.submit执行，Feture.get接受异常
+
+3.重写ThreadPoolExecutor.afterExecute方法,处理传递的异常引用
+
+4.实例化时，传入自己的ThreadFactory，设置Thread.UncaughtExceptionHandler处理未检测的异常
+
+#### 线程池的状态
+
+ThreadPoolExecutor 类使用一个名为 ctl 的原子变量来存储线程池的状态信息。这个变量是一个 long 类型的值，其中一部分位用于表示线程池的状态，另一部分位用于表示线程池中的活动线程数。ctl 变量的低三位用于表示线程池的状态，共有四种状态：
+
+**RUNNING**  
+
+该状态的线程池会接收新任务，并处理阻塞队列中的任务;
+
+调用线程池的 shutdown()方法，可以切换到 SHUTDOWN 状态;
+
+调用线程池的 shutdownNow()方法，可以切换到 STOP 状态;
+
+这是线程池的初始状态
+
+**SHUTDOWN**  
+
+该状态的线程池不会接收新任务，但会处理阻塞队列中的任务；
+
+队列为空，并且线程池中执行的任务也为空,进入 TIDYING 状态;
+
+**STOP**  
+
+该状态的线程不会接收新任务，也不会处理阻塞队列中的任务，而且会中断正在运行的任务；
+
+线程池中执行的任务为空,进入 TIDYING 状态;
+
+**TIDYING**  
+
+该状态表明所有的任务已经运行终止，记录的任务数量为 0。
+
+terminated()执行完毕，进入 TERMINATED 状态
+
+当最后一个任务完成后，线程池会进入 TIDYING 状态。
+
+**TERMINATED**  
+
+线程池已经完成所有清理工作，处于终止状态。
+
+#### 线程池对参数的动态修改
+
+在我们微服务的架构下，可以利用配置中心如 Nacos、Apollo 等等，也可以自己开发配置中心。业务服务读取线程池配置，获取相应的线程池实例来修改线程池的参数。
+
+如果限制了配置中心的使用，也可以自己去扩展ThreadPoolExecutor，重写方法，监听线程池参数变化，来动态修改线程池参数。
+
+### 7. 线程池在使用时需要注意什么？
+
+①、**选择合适的线程池大小**
+
+过小的线程池可能会导致任务一直在排队
+
+过大的线程池可能会导致大家都在竞争 CPU 资源，增加上下文切换的开销
+
+可以根据业务是 IO 密集型还是 CPU 密集型来选择线程池大小：
+
+CPU 密集型：指的是任务主要使用来进行大量的计算，没有什么导致线程阻塞。一般这种场景的线程数设置为 CPU 核心数+1。
+
+IO 密集型：当执行任务需要大量的 io，比如磁盘 io，网络 io，可能会存在大量的阻塞，所以在 IO 密集型任务中使用多线程可以大大地加速任务的处理。一般线程数设置为 2*CPU 核心数。
+
+②、**任务队列的选择**
+
+使用有界队列可以避免资源耗尽的风险，但是可能会导致任务被拒绝
+
+使用无界队列虽然可以避免任务被拒绝，但是可能会导致内存耗尽
+
+一般需要设置有界队列的大小，比如 LinkedBlockingQueue 在构造的时候可以传入参数来限制队列中任务数据的大小，这样就不会因为无限往队列中扔任务导致系统的 oom。
+
+③、**尽量使用自定义的线程池**，而不是使用 Executors 创建的线程池，因为 newFixedThreadPool 线程池由于使用了 LinkedBlockingQueue，队列的容量默认无限大，实际使用中出现任务过多时会导致内存溢出；
+
+newCachedThreadPool 线程池由于核心线程数无限大，当任务过多的时候会导致创建大量的线程，可能机器负载过高导致服务宕机。
+
+### 8.你能设计并实现一个线程池吗？
+
+**核心流程**：
+
+线程池中有 N 个工作线程
+
+把任务提交给线程池运行
+
+如果线程池已满，把任务放入队列
+
+最后当有空闲时，获取队列中任务来执行
+
+**代码示例**：
+
+```java
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class SimpleThreadPool {
+
+    private final BlockingQueue<Runnable> workQueue;
+    private final int corePoolSize;
+    private final int maximumPoolSize;
+    private final long keepAliveTime;
+    private final TimeUnit unit;
+    private volatile boolean isShutdown = false;
+
+    private final AtomicInteger activeThreads = new AtomicInteger(0);
+    private final ThreadFactory threadFactory;
+
+    public SimpleThreadPool(int corePoolSize, int maximumPoolSize, long keepAliveTime, TimeUnit unit, ThreadFactory threadFactory) {
+        this.corePoolSize = corePoolSize;
+        this.maximumPoolSize = maximumPoolSize;
+        this.keepAliveTime = keepAliveTime;
+        this.unit = unit;
+        this.threadFactory = threadFactory;
+        this.workQueue = new LinkedBlockingQueue<>();
+    }
+
+    public void execute(Runnable command) {
+        if (isShutdown) {
+            throw new IllegalStateException("Executor has been shutdown");
+        }
+
+        // 尝试将任务放入队列
+        if (workQueue.offer(command)) {
+            addWorker();
+        } else {
+            // 队列已满，尝试创建新线程
+            startWorker(command);
+        }
+    }
+
+    private void addWorker() {
+        if (activeThreads.get() < corePoolSize) {
+            startWorker(null);
+        }
+    }
+
+    private void startWorker(Runnable firstTask) {
+        Thread worker = threadFactory.newThread(new Worker(firstTask));
+        worker.start();
+    }
+
+    private class Worker implements Runnable {
+        private Runnable currentTask;
+
+        public Worker(Runnable firstTask) {
+            this.currentTask = firstTask;
+        }
+
+        @Override
+        public void run() {
+            if (currentTask != null) {
+                try {
+                    currentTask.run();
+                } finally {
+                    currentTask = null;
+                }
+            }
+
+            while (!isShutdown) {
+                try {
+                    currentTask = workQueue.take();
+                    currentTask.run();
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
+                } catch (RuntimeException e) {
+                    // 处理异常
+                    handleException(e);
+                }
+            }
+
+            activeThreads.decrementAndGet();
+        }
+    }
+
+    private void handleException(RuntimeException e) {
+        System.err.println("Caught exception: " + e.getMessage());
+        e.printStackTrace();
+    }
+
+    public void shutdown() {
+        isShutdown = true;
+        // 中断所有空闲线程
+        interruptIdleWorkers();
+    }
+
+    private void interruptIdleWorkers() {
+        for (int i = 0; i < activeThreads.get(); i++) {
+            Thread worker = new Thread(() -> {});
+            worker.interrupt();
+        }
+    }
+
+    public static void main(String[] args) {
+        SimpleThreadPool executor = new SimpleThreadPool(5, 10, 60, TimeUnit.SECONDS, new CustomThreadFactory("MyThread"));
+
+        for (int i = 0; i < 20; i++) {
+            int taskId = i;
+            executor.execute(() -> {
+                System.out.println("Processing task " + taskId);
+                try {
+                    Thread.sleep(1000);  // 模拟任务执行时间
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    System.out.println("Task interrupted");
+                }
+            });
+        }
+
+        // 关闭线程池
+        executor.shutdown();
+    }
+}
+
+class CustomThreadFactory implements ThreadFactory {
+    private final AtomicInteger threadNumber = new AtomicInteger(1);
+    private final String namePrefix;
+
+    public CustomThreadFactory(String namePrefix) {
+        this.namePrefix = namePrefix;
+    }
+
+    @Override
+    public Thread newThread(Runnable r) {
+        Thread t = new Thread(r, namePrefix + threadNumber.getAndIncrement());
+        t.setUncaughtExceptionHandler((thread, throwable) -> {
+            System.out.println("Caught exception in thread " + thread.getName() + ": " + throwable.getMessage());
+            throwable.printStackTrace();
+        });
+        return t;
+    }
+}
+```
